2023-03-10  Daniel Gillies  <dc-gill1@d3-login02>

	* src/HWW/gg_WW_int.f (gg_ww_int): Changed the int only case so that we have SM - BSM
	(gg_ww_int): Modified the insertion of dimension 8 amplitudes into Adim8 removing conj.

2023-03-09  Daniel Gillies  <dc-gill1@d3-login01>

	* src/HWW/qqb_hww_tb.f (qqb_hww_tb): Have seen that dim8 is also included in qqb and therefore proc 61

	* src/HWW/gg_WW_int.f (gg_ww_int): removed A3pm

	* src/HWW/gg_ww_dim8.f90 (A5pp): Added the correct amplitudes.
	(A5mp): Corrected mistake

	* src/Parton/mrst2004.f (mrst2004): A function in this program requires a correction - unsure why...

	* Bin/Autotools/gnu2csv.py: Created an Autotools file to store the automation tools for making many runs

	* Bin/Autotools/mkdat.py: Copied in mkdat.py

	* Bin/Autotools/dat2gnu.py: Copied in dat2gnu.py

	* src/HWW/gg_ww_dim8.f90: Test addition of zero

2019-07-19  Harry Phillips  <hp257@eod-2.uscs.susx.ac.uk>

	* src/HWW/gg_ww_dim8.f90 (gg_ww_dim8): *** ADDED ***
	contains relevant helicity amplitudes for CP-even dimension-8
	operators contributing to gg->WW 

	* src/HWW/gg_WW_int.f (gg_ww_int):
	implemented contribution of dimension 8 operators to gg->WW

2018-03-16  Luke  <luke@Rus>

	* src/Inc/kappa.f (main): anomalous Yukawa couplings parameters
	for BSM di-boson studies

	* src/ZZ/gg_hzz_tb.f (gg_hZZ_tb):
	* src/ZZ/gg_ZZ_int.f (gg_ZZ_int):
	* src/ZZ/gg_ZZ_all.f (gg_ZZ_all):
	* src/ZZ/gg_ZZ_Hpi.f (gg_ZZ_Hpi):
	* src/ZZ/getggHZZamps.f (getggHZZamps):
	* src/HWW/gg_WW_int.f (gg_ww_int):
	* src/HWW/qqb_hww_tb.f (qqb_hww_tb):
	added in anomalous Yukawa couplings for top and bottom
	loops, as well as a contact ggH interaction


	* src/User/usercode.f90: added interfaces for JetVHeto library,
	ATLAS cuts for HWW, new histograms for observables of interest

	* src/Inc/jetvheto.f (main): JetVHeto global parameters and
	variables needed by MCFM

	* src/Procdep/resmNNLLint.f (resmNNLLint):
	* src/Procdep/resmNLLint.f (resmNLLint):